--- a/index.html
+++ b/index.html
@@ -28,7 +28,37 @@
 
             <article>
                 <details>
-                    <summary></summary>
+                    <summary>Kaneel Gember</summary>
+
+                    <h3>Jenn</h3>
+                    <p>7,5</p>
+
+                    <h4>Sid</h4>
+                    <p>8</p>
+                </details>
+            </article>
+
+            <article>
+                <details>
+                    <summary>Gember Honing</summary>
+
+                    <h3>Jenn</h3>
+                    <p>2</p>
+
+                    <h4>Sid</h4>
+                    <p>4</p>
+                </details>
+            </article>
+
+            <article>
+                <details>
+                    <summary>Mint</summary>
+
+                    <h3>Jenn</h3>
+                    <p>0</p>
+
+                    <h4>Sid</h4>
+                    <p>0</p>
                 </details>
             </article>
         </section>
