--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
             <h2>Meest Recente thee:</h2>
 
             <article>
+                <img src="image.jpg" alt="">
+                <h3>Rooibos Citrus</h3>
+
+                <h4>Jenn</h4>
+                <p>6</p>
+
+                <h5>Sid</h5>
+                <p>4</p>
+            </article>
+
+            <article>
                 <details>
                     <summary>Rooibos Citrus</summary>
 
